[2018-06-10 18:30:32 +0200]  Fix typo                                                                   karasu      {8cb7a9f2}
[2018-06-10 18:27:30 +0200]  Forgot to change this var                                                  karasu      {f856839d}
[2018-06-10 18:25:32 +0200]  Changed OK to APPLY                                                        karasu      {be34b911}
[2018-06-10 18:15:37 +0200]  More dialog fixing. Nearly finished.                                       karasu      {ce952d80}
[2018-06-10 17:49:11 +0200]  Remove ok/apply buttons' modifications                                     karasu      {5d109de6}
[2018-06-10 17:47:34 +0200]  Fix luks_settings password_changed                                         karasu      {dcda0545}
[2018-06-10 17:32:53 +0200]  Add show_all()                                                             karasu      {e254abbb}
[2018-06-10 17:31:21 +0200]  Add show_all                                                               karasu      {0b0c48a4}
[2018-06-09 19:56:14 +0200]  Create table dialog is working. The others need fixing                     karasu      {3d8e27e3}
[2018-06-09 18:39:06 +0200]  Create Table Dialog is not working                                         karasu      {07838784}
[2018-06-09 18:24:42 +0200]  Fix import when testing                                                    karasu      {5f60d860}
[2018-06-09 18:19:58 +0200]  Code cleanup (trailing spaces mostly)                                      karasu      {e5315a3f}
[2018-06-09 18:09:25 +0200]  Fix typo and remove unused code                                            karasu      {146a1075}
[2018-06-09 18:07:07 +0200]  More fixes in advanced dialogs                                             karasu      {0a70a02f}
[2018-06-09 17:16:48 +0200]  Missing param                                                              karasu      {3cdb8f25}