@@ -56,7 +56,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="halign">start</property>
-                        <signal name="activate" handler="use_luks_switch_activate" swapped="no"/>
+                        <signal name="activate" handler="use_luks_switch_activated" swapped="no"/>
                     </object>
                     <packing>
                         <property name="left_attach">1</property>
